[package]
name = "demo-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.37", features = ["full", "extra-traits", "visit"] }
proc-macro2 = { version = "1.0.67", features = ["default", "span-locations"] }
quote = { version = "1.0.33", features = ["default"] }
derive-attr-parser = { path = "../derive-attr-parser" }
