[package]
name = "derive-attr-parser"
version = "0.1.0"
authors = ["Neal <neal.mi@outlook.com>"]
edition = "2021"
repository = "https://github.com/nealmi/derive-attr-parse.git"
categories = ["rust-patterns", "development-tools::procedural-macro-helpers", "parsing"]
description = "Very simple parser for proc macro attributes"
documentation = "https://docs.rs/derive-attr-parser"
license = "MIT OR Apache-2.0"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
syn = { version = "2.0.37", features = ["full", "extra-traits", "visit"] }
proc-macro2 = { version = "1.0.67", features = ["default", "span-locations"] }
quote = { version = "1.0.33", features = ["default"] }
